fix for header bar not collapsing correctly on desktop

--- a/public/bootcards-demo-app/css/bootcards-demo-app.css
+++ b/public/bootcards-demo-app/css/bootcards-demo-app.css
@@ -27,3 +27,8 @@ and (orientation : portrait) {
  
 
 }
+
+.nav > li > a {
+  padding: 15px 14px;
+}
+
